--- a/doc/ucl.texi
+++ b/doc/ucl.texi
@@ -325,8 +325,10 @@ The map structure
 
 * map intro::                   Introduction to operations and
                                 implementation.
+* map types::                   Type definitions for map.
 * map creation::                Creating and destroying maps.
-* map adding/removing::         Adding and removing elements to a map.
+* map insertion::               Adding elements to a map.
+* map removal::                 Removing elements from a map.
 * map accessors::               Accessing values and keys.
 * map ops::                     Various operations on a map.
 * map iterators::               Iteration over a map.
@@ -4741,40 +4743,12 @@ while (N) @{
 @node map
 @section The map structure
 
-
 @cindex Map container
 
-@menu
-* map intro::                   Introduction to operations and
-                                implementation.
-* map creation::                Creating and destroying maps.
-* map adding/removing::         Adding and removing elements to a map.
-* map accessors::               Accessing values and keys.
-* map ops::                     Various operations on a map.
-* map iterators::               Iteration over a map.
-* set iterators::               Composing map iterators.
-@end menu
+The map container structure can be used to implement an associative
+array; it's implemented as an @acronym{AVL} tree.
 
-@noindent
-The @code{ucl_map_t} structure can be used to implement an associative
-array; it's implemented as an AVL tree.
-
-
-@deftp {Struct Typedef} ucl_map_struct_t
-Base structure for the container.  It must be allocated by the user's
-code.
-@end deftp
-
-@deftp {Single Element Array Typedef} ucl_map_t
-One--element array of @code{ucl_map_struct_t}.
-@end deftp
-
-@deftp {Struct Typedef} ucl_map_link_t
-The data type of the nodes.  Nodes must be allocated and freed by the
-user's code.
-@end deftp
-
-
+@quotation
 The map/multimap idea was inspired by the book on C++ by Bjarne
 Stroustrup and by the STL C++ (Standard Template Library) by Stepanov
 and Lee.
@@ -4782,14 +4756,26 @@ and Lee.
 The handling of nodes is influenced by the handling of elements in the
 @acronym{TCL} (Tool Command Language) hash table by John Ousterhout and
 others (@url{http://www.tcl.tk/} for more about @acronym{TCL}).
+@end quotation
 
+@menu
+* map intro::                   Introduction to operations and
+                                implementation.
+* map types::                   Type definitions for map.
+* map creation::                Creating and destroying maps.
+* map insertion::               Adding elements to a map.
+* map removal::                 Removing elements from a map.
+* map accessors::               Accessing values and keys.
+* map ops::                     Various operations on a map.
+* map iterators::               Iteration over a map.
+* set iterators::               Composing map iterators.
+@end menu
 
 @c page
 @node map intro
 @subsection Introduction to operations and implementation
 
 
-@noindent
 Maps are often used as associative arrays, that is: as collections of
 key/value pairs.  The operations we want to do on a map are:
 
@@ -4815,278 +4801,245 @@ lesser.
 @end itemize
 
 Clearly there are two sub--types of map container: the one that allows
-multiple values to be associated to the same key, and the one that
-doesn't.  We call the first a @dfn{multimap} and the second a @dfn{simple
+multiple values to be associated to the same key, and the one that does
+not.  We call the first a @dfn{multimap} and the second a @dfn{simple
 map}.
 
-@c ------------------------------------------------------------
+@c page
+@node map types
+@subsection Type definitions for map
+
+
+@deftp {Struct Typedef} ucl_map_tag_t
+@deftpx {Single Element Array Typedef} ucl_map_t
+Base structure for the container.  It must be allocated by the user's
+code.
+@end deftp
+
+
+@deftp {Struct Typedef} ucl_map_link_t
+The data type of the nodes.  Nodes must be allocated and freed by the
+user's code.
+@end deftp
 
 @c page
 @node map creation
 @subsection Creating and destroying maps
 
 
-@deftypefun void ucl_map_constructor (@var{self}, @var{flags}, @var{keycmp})
-Initialise an already allocated map structure.  Arguments:
-
-@table @code
-@item ucl_map_t  @var{self}
-pointer to the already allocated map structure;
-
-@item unsigned int @var{flags}
-map behaviour flags;
-
-@item ucl_comparison_t @var{keycmp}
-function+context used to compare keys.
-@end table
+@deftypefun void ucl_map_constructor (ucl_map_t @var{M}, unsigned int @var{flags}, ucl_comparison_t @var{keycmp})
+Initialise an already allocated map structure.  @var{M} must be a
+pointer to an already allocated map structure; pointer to the already
+allocated map structure; @var{flags} configures the map behaviour;
+@var{keycmp} is the function+context used to compare keys.
 
 Map configuration @var{flags} can be zero of an ORed combination of:
 
 @table @code
 @item UCL_ALLOW_MULTIPLE_OBJECTS
-allows more than one object to be associated to the same key, with this
+Allows more than one object to be associated to the same key, with this
 the map behaves like a multimap.
 @end table
+
+The map structure needs no destructor, but before releasing its memory
+block the user code has to extract all the nodes from the map.
 @end deftypefun
-
-
-@deftypefun void ucl_map_destructor (ucl_map_t @var{self})
-Destroy a map structure, the structure itself is not deallocated.  The
-elements are reset to zero.
-
-Before invoking this function the user's code has to extract all the nodes
-from the map.   If the elements are not extracted before this function is
-invoked, at least memory leakage will happen.
-@end deftypefun
-
-@c ------------------------------------------------------------
 
 @c page
-@node map adding/removing
-@subsection Adding and removing elements to a map
+@node map insertion
+@subsection Adding elements to a map
 
 
-@deftypefun void ucl_map_insert (ucl_map_t @var{self}, ucl_map_link_t * @var{link_p})
+@deftypefun void ucl_map_insert (ucl_map_t @var{M}, ucl_map_link_t @var{L})
 Given an already allocated and constructed map link, insert it in the
 map.
 
-An invocation to this function always succeeds if @var{self} references
-a multimap, but it can lead to an error if @var{self} is a simple map
-and an element with the same key already exists.  If such a condition
-occurs, this function @strong{silently does nothing}; it's our
-responsibility to use @function{ucl_map_find} to check for the element
-existence.
-@end deftypefun
+An invocation to this function always succeeds if @var{M} references a
+multimap, but it can lead to an error if @var{M} is a simple map and an
+element with the same key already exists.  If such a condition occurs,
+this function @strong{silently does nothing}; it's our responsibility to
+use @cfunc{ucl_map_find} to check for the element existence.
 
 Example of link insertion in a simple map:
 
 @example
-ucl_memory_allocator_t  allocator;
-ucl_map_t               this;
-ucl_map_link_t *        link;
-ucl_value_t             key;
-ucl_value_t             val;
+ucl_memory_allocator_t  A;
+ucl_map_t               M;
+ucl_map_link_t          L;
+ucl_value_t             K;
 
-...
-
-key = ...;
-val = ...;
-
-link = ucl_map_find(this, key);
-if (NULL == link)
+link = ucl_map_find(M, K);
+if (! L)
   @{
-    allocator.alloc(allocator.data, &link, sizeof(ucl_map_link_t));
-    ucl_map_setkey(link, key);
-    ucl_map_setval(link, val);
-    ucl_map_insert(this, link);
+    M.alloc(M.data, &L, sizeof(ucl_map_link_t));
+    ucl_map_setkey(L, K);
+    ucl_map_insert(M, L);
   @}
 @end example
-
-@noindent
-memory handling for the key and the value are full responsibility of the
-user's code.
-
-
-@deftypefun {ucl_map_link_t *} ucl_map_remove (ucl_map_t @var{self}, ucl_map_link_t * @var{link_p})
-@deftypefunx {ucl_map_link_t *} ucl_map_extract (ucl_map_t @var{self}, ucl_map_link_t * @var{link_p})
-Remove from the map the key/value pair in the element referenced by
-@var{link_p}.  This must be the return value of a previous invocation of
-@function{ucl_map_find}.  This function only removes the link from the
-map: it's our responsibility to free the key, the value and the link
-structure itself.
-
-Return a pointer to the extracted link.
 @end deftypefun
 
+@c page
+@node map removal
+@subsection Removing elements from a map
+
+
+@deftypefun ucl_map_link_t ucl_map_remove (ucl_map_t @var{M}, ucl_map_link_t @var{L})
+@deftypefunx ucl_map_link_t ucl_map_extract (ucl_map_t @var{M}, ucl_map_link_t @var{L})
+Remove from the map the key/value pair in the element referenced by
+@var{L}.  This must be the return value of a previous invocation of
+@cfunc{ucl_map_find}.  This function only removes the link from the map:
+it's our responsibility to free the key, the value and the link
+structure itself.  Return a pointer to the extracted link.
 
 Example of link removal:
 
 @example
-ucl_memory_allocator_t  allocator;
-ucl_map_t               this;
-ucl_map_link_t *        link;
-ucl_value_t             key;
-ucl_value_t             val;
+ucl_memory_allocator_t  A;
+ucl_map_t               M;
+ucl_map_link_t          L;
+ucl_value_t             K;
 
-...
-
-link = ucl_map_find(this, key);
-if (NULL != link)
+L = ucl_map_find(M, K);
+if (! L)
   @{
-    ucl_map_remove(this, link);
-    key = ucl_map_getkey(link);
-    val = ucl_map_getval(link);
-    allocator.alloc(allocator.data, &link, 0);
-
-    /* free "key" and "val" */
+    ucl_map_remove(M, L);
+    A.alloc(A.data, &L, 0);
   @}
 @end example
-
-@c ------------------------------------------------------------
+@end deftypefun
 
 @c page
 @node map accessors
 @subsection Accessing values and keys
 
 
-@deftypefun void ucl_map_setkey (ucl_map_link_t * @var{link_p}, ucl_value_t @var{newKey})
+@deftypefun void ucl_map_setkey (ucl_map_link_t @var{L}, ucl_value_t @var{newKey})
 Store a key in a link.
 @end deftypefun
 
 
-@deftypefun void ucl_map_setval (ucl_map_link_t * @var{link_p}, ucl_value_t @var{newObj})
+@deftypefun void ucl_map_setval (ucl_map_link_t @var{L}, ucl_value_t @var{newObj})
 Store an value in a link.
 @end deftypefun
 
 
-@deftypefun ucl_value_t ucl_map_getkey (ucl_map_link_t * @var{link_p})
+@deftypefun ucl_value_t ucl_map_getkey (ucl_map_link_t @var{L})
 Return the key in a map link.
 @end deftypefun
 
 
-@deftypefun ucl_value_t ucl_map_getval (ucl_map_link_t * @var{link_p})
+@deftypefun ucl_value_t ucl_map_getval (ucl_map_link_t @var{L})
 Return the value in a map link.
 @end deftypefun
-
-@c ------------------------------------------------------------
 
 @c page
 @node map ops
 @subsection Various operations on a map
 
 
-@deftypefun size_t ucl_map_count (const ucl_map_t @var{self}, const ucl_value_t @var{key})
+@deftypefun size_t ucl_map_count (const ucl_map_t @var{M}, const ucl_value_t @var{key})
 Return the number of elements with @var{key}; this is always 0 or 1 for
 simple maps.
 @end deftypefun
 
 
-@deftypefun {ucl_map_link_t *} ucl_map_find (const ucl_map_t @var{self}, const ucl_value_t @var{key});
-Return a pointer to the (first found) element associated with
-@var{key}.  The return value is @cnull{} if such an element doesn't
-exist.
+@deftypefun ucl_map_link_t ucl_map_find (const ucl_map_t @var{M}, const ucl_value_t @var{key});
+Return a pointer to the (first found) element associated with @var{key}.
+The return value is @cnull{} if such an element doesn't exist.
 
 For a multimap, this function returns a pointer to the first element
 with the selected key, so that the others can be found with repeated
-invocations of @function{ucl_map_next}.
+invocations of @cfunc{ucl_map_next}.
 @end deftypefun
 
 
-@deftypefun {ucl_map_link_t *} ucl_map_first (const ucl_map_t @var{self})
-Return a pointer to the element with lesser key in the map, or
-@cnull{} if the map is empty.
+@deftypefun ucl_map_link_t ucl_map_first (const ucl_map_t @var{M})
+Return a pointer to the element with lesser key in the map, or @cnull{}
+if the map is empty.
 @end deftypefun
 
 
-@deftypefun {ucl_map_link_t *} ucl_map_last (const ucl_map_t @var{self})
-Return a pointer to the element with greater key in the map, or
-@cnull{} if the map is empty.
+@deftypefun ucl_map_link_t ucl_map_last (const ucl_map_t @var{M})
+Return a pointer to the element with greater key in the map, or @cnull{}
+if the map is empty.
 @end deftypefun
 
 
-@deftypefun {ucl_map_link_t *} ucl_map_next (const ucl_map_link_t * @var{link_p})
+@deftypefun ucl_map_link_t ucl_map_next (const ucl_map_link_t @var{L})
 Return a pointer to the element adjacent to the one referenced by
-@var{link_p} with greater key, or @cnull{} if @var{link_p} has the
-greater key in the map.
+@var{L} with greater key, or @cnull{} if @var{L} has the greater key in
+the map.
 @end deftypefun
 
 
-@deftypefun {ucl_map_link_t *} ucl_map_prev (const ucl_map_link_t * @var{link_p})
+@deftypefun ucl_map_link_t ucl_map_prev (const ucl_map_link_t @var{L})
 Return a pointer to the element adjacent to the one referenced by
-@var{link_p} with lesser key, or @cnull{} if @var{link_p} has the
-lesser key in the map.
+@var{L} with lesser key, or @cnull{} if @var{L} has the lesser key in
+the map.
 @end deftypefun
 
 
-@deftypefun {ucl_map_link_t *} ucl_map_find_or_next (const ucl_map_t @var{self}, const ucl_value_t @var{key})
+@deftypefun ucl_map_link_t ucl_map_find_or_next (const ucl_map_t @var{M}, const ucl_value_t @var{key})
 Given a key find the element in the map associated with it, or the
 element with the lesser key greater than the selected one.  Return a
-pointer to the requested link or @cnull{} if all the keys in the map
-are lesser than the selected one.
+pointer to the requested link or @cnull{} if all the keys in the map are
+lesser than the selected one.
 @end deftypefun
 
 
-@deftypefun {ucl_map_link_t *} ucl_map_find_or_prev (const ucl_map_t @var{self}, const ucl_value_t @var{key})
+@deftypefun ucl_map_link_t ucl_map_find_or_prev (const ucl_map_t @var{M}, const ucl_value_t @var{key})
 Given a key find the element in the map associated with it, or the
 element with the greater key lesser than the selected one.  Return a
-pointer to the requested link or @cnull{} if all the keys in the map
-are greater than the selected one.
+pointer to the requested link or @cnull{} if all the keys in the map are
+greater than the selected one.
 @end deftypefun
 
 
-@deftypefun size_t ucl_map_size (const ucl_map_t @var{self})
+@deftypefun size_t ucl_map_size (const ucl_map_t @var{M})
 Return the number of elements in the map.
 @end deftypefun
-
-@c ------------------------------------------------------------
 
 @c page
 @node map iterators
 @subsection Iteration over a map
 
 
-@noindent
 For the map, the iteration is over the map links:
-@function{ucl_iterator_ptr} returns a pointer to the current map link.
-We can use the @function{ucl_map_getkey} and @function{ucl_map_setkey}
-to acquire the keys and values.
+@cfunc{ucl_iterator_ptr} returns a pointer to the current map link.  We
+can use the @cfunc{ucl_map_getkey} and @cfunc{ucl_map_setkey} to acquire
+the keys and values.
 
 
-@deftypefun void ucl_map_iterator_inorder (const ucl_map_t @var{self}, ucl_iterator_t @var{iterator})
-@deftypefunx void ucl_map_iterator_preorder (const ucl_map_t @var{self}, ucl_iterator_t @var{iterator})
-@deftypefunx void ucl_map_iterator_postorder (const ucl_map_t @var{self}, ucl_iterator_t @var{iterator})
-@deftypefunx void ucl_map_iterator_levelorder (const ucl_map_t @var{self}, ucl_iterator_t @var{iterator})
-Initalise an inorder, preorder, postorder or levelorder
-iteration.  @ref{btree iteration}, for details.
+@deftypefun void ucl_map_iterator_inorder (const ucl_map_t @var{M}, ucl_iterator_t @var{I})
+@deftypefunx void ucl_map_iterator_preorder (const ucl_map_t @var{M}, ucl_iterator_t @var{I})
+@deftypefunx void ucl_map_iterator_postorder (const ucl_map_t @var{M}, ucl_iterator_t @var{I})
+@deftypefunx void ucl_map_iterator_levelorder (const ucl_map_t @var{M}, ucl_iterator_t @var{I})
+Initalise an inorder, preorder, postorder or levelorder iteration.
+@ref{btree iteration}, for details.
 @end deftypefun
 
 
-@deftypefun void ucl_map_lower_bound (const ucl_map_t @var{self}, ucl_iterator_t @var{iterator}, ucl_value_t @var{key})
+@deftypefun void ucl_map_lower_bound (const ucl_map_t @var{M}, ucl_iterator_t @var{I}, ucl_value_t @var{key})
 Initialise an iteration over the elements with the selected key,
 starting with the first element.
 @end deftypefun
 
 
-@deftypefun void ucl_map_upper_bound (const ucl_map_t @var{self}, ucl_iterator_t @var{iterator}, ucl_value_t @var{key})
+@deftypefun void ucl_map_upper_bound (const ucl_map_t @var{M}, ucl_iterator_t @var{I}, ucl_value_t @var{key})
 Initialise an iteration over the elements with the selected key,
 starting with the last element.
 @end deftypefun
-
-@c ------------------------------------------------------------
 
 @c page
 @node set iterators
 @subsection Composing map iterators
 
-
 @cindex Set iterators
 
-
-@noindent
 It's possible to compose map iterators to implement set operations: the
-keys from a map are used as set elements, the values are not
-considered.  A set operation is implemented as an iterator that visits
-one by one the result of the operation itself.
+keys from a map are used as set elements, the values are not considered.
+A set operation is implemented as an iterator that visits one by one the
+result of the operation itself.
 
 The key values must be of the same data type.  That means that the
 compare function used by both the maps, must accept the same type of
@@ -5095,13 +5048,13 @@ values and return the same values when called with the same arguments.
 For all the set iterators, the arguments are:
 
 @table @code
-@item ucl_iterator_t  @var{it1}
+@item ucl_iterator_t @var{it1}
 pointer to an in--order iterator over set 1, already initialised;
 
-@item ucl_iterator_t  @var{it2}
+@item ucl_iterator_t @var{it2}
 pointer to an in--order iterator over set 2, already initialised;
 
-@item ucl_iterator_t  @var{iter}
+@item ucl_iterator_t @var{iter}
 pointer to the set iterator structure.
 @end table
 
@@ -5152,8 +5105,6 @@ Intersection: 4 5 6
 Complementary intersection: 0 1 2 3 7 8 9
 Subtraction: 0 1 2 3
 @end example
-
-@c ------------------------------------------------------------
 
 @c page
 @node vector
